--- a/src/main/webapp/css/voterInformation.css
+++ b/src/main/webapp/css/voterInformation.css
@@ -3,3 +3,20 @@ header {
     background-image: url('../img/us_flag_header.jpg');
     background-size: 100% 100%;
 }
+
+/*  Navigation */
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #00589C;
+}
+
+nav ul li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
