--- a/src/main/webapp/css/voterInformation.css
+++ b/src/main/webapp/css/voterInformation.css
@@ -3,6 +3,14 @@ header {
     background-image: url('../img/us_flag_header.png');
     background-size: 100% 100%;
 }
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: auto;
+  height: 50px;
+  length: auto-fit;
+  background-color: #f1f1f1;
+}
 
 /*  Navigation */
 nav div {
@@ -41,4 +49,36 @@ nav div ul li a href{
 
 .nav.navbar-nav li a:hover {
   background-color: #70addd !important;
+}
+
+#us-map{
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+path:hover, circle:hover {
+  stroke: #ffffff !important;
+  stroke-width:4px;
+  stroke-linejoin: round;
+  cursor: pointer;
+}
+#path67 {
+  fill: none !important;
+  stroke: #A9A9A9 !important;
+  cursor: default;
+}
+#info-box {
+  display: block;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+  background-color: #ffffff;
+  border: 2px solid #BF0A30;
+  border-radius: 5px;
+  padding: 5px;
+  font-family: arial;
 }
