--- a/src/main/webapp/css/voterInformation.css
+++ b/src/main/webapp/css/voterInformation.css
@@ -1,16 +1,3 @@
-/* Page Header */
-header {
-    background-image: url('../img/us_flag_header.png');
-    background-size: 100% 100%;
-}
-#footer {
-  position: absolute;
-  bottom: 0;
-  width: auto;
-  height: 50px;
-  length: auto-fit;
-  background-color: #f1f1f1;
-}
 
 /*  Navigation */
 nav div {
@@ -82,3 +69,29 @@ path:hover, circle:hover {
   padding: 5px;
   font-family: arial;
 }
+
+header {
+    background-image: url('../img/us_flag_header.png');
+    background-size: 100% 100%;
+}
+/* Page Footer */
+.containerNew {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  justify-content: center;
+  display: inline-flex;
+  flex-direction: row;
+  background-color: #00589C;
+  font-size: 14px;
+  color: white;
+  background-size: 100% 100%;
+  padding: 15px;
+}
+.row {
+	flex: 1;
+}
+
+
+
+
