--- a/src/main/webapp/css/voterInformation.css
+++ b/src/main/webapp/css/voterInformation.css
@@ -79,7 +79,7 @@ header {
   position: fixed;
   bottom: 0;
   width: 100%;
-  justify-content: center;
+  justify-content: space-evenly;
   display: inline-flex;
   flex-direction: row;
   background-color: #00589C;
