--- a/src/main/webapp/css/voterInformation.css
+++ b/src/main/webapp/css/voterInformation.css
@@ -51,6 +51,8 @@ nav div ul li a href{
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 55px;
+  margin: 115px;
 }
 path:hover, circle:hover {
   stroke: #ffffff !important;
@@ -94,6 +96,21 @@ header {
   background-size: 100% 100%;
   padding: 15px;
 }
+
+.mainDropMenu {
+  position: fixed;
+  width: 100%;
+  justify-content: space-evenly;
+  display: inline-flex;
+  flex-direction: row;
+  background-color: white;
+  font-size: 12px;
+  background-size: 100% 100%;
+  padding: 15px;
+  margin: 25px;
+}
+
+
 .row {
 	flex: 1;
 }
@@ -105,4 +122,9 @@ header {
 	display : flex;
 	flex-wrap: wrap;
 	justify-content: space-around;
+}
+a {
+    color: white;
+    opacity: 0.5;
+    
 }
